# terrapi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  docker-compose.yml  install.sh  premake5.lua  terrapi.service
broker/: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  install.sh
broker/etc/: nginx.conf
broker/etc/init.d/: terrapi  terrapi-broker
broker/etc/terrapi-broker/: config
broker/migrations/2023-03-07-134350_create_events/: up.sql
broker/migrations/2023-03-07-183926_create_configs/: up.sql
broker/migrations/2024-01-31-171539_create_publishers/: down.sql  up.sql
broker/migrations/2024-02-01-154933_create_records/: down.sql  up.sql
broker/src/: cache.rs  error.rs  main.rs  model.rs  prelude.rs  repo.rs  rest.rs  schema.rs  utils.rs
broker/src/app/: auth.rs  hello.rs  mod.rs  publisher.rs  record.rs
broker/src/db/: device.rs  mod.rs  publisher.rs  record.rs
broker/src/models/: device.rs  mod.rs  publisher.rs  record.rs
broker/test/: terrapi_broker.postman_collection.json
broker/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
broker/web/src/: App.vue
broker/web/src/api/: index.ts
broker/web/src/components/: ChartCard.vue  ClientCard.vue  ConfigCard.vue  LoginCard.vue
broker/web/src/layouts/default/: AppBar.vue  Default.vue  SideBar.vue  View.vue
broker/web/src/models/: index.ts
broker/web/src/plugins/: index.ts
broker/web/src/records/: chart.ts  data.ts
broker/web/src/router/: index.ts
broker/web/src/store/: index.ts
broker/web/src/views/: Environment.vue  Home.vue
conf_test/: configuration.terra  example.terra
cpp_test/: Makefile  dht11_test.cpp
docs/: Emulace.md  Transkompilace.md  schema.md
example/: configuration.ini
lib/wiringPi/include/: wiringPi.h
python_test/: dht11_test.py
services/: Makefile  README.md  docker-compose.yml  install.sh
services/broker/: .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  env.example  go.mod  go.sum  mosquitto.conf
services/broker/api/: app.go
services/broker/api/handlers/: client.go  config.go  measurement.go
services/broker/api/middleware/: auth.go
services/broker/api/presenter/: common.go
services/broker/api/routes/: client.go  config.go  measurement.go
services/broker/core/: config.go  error.go
services/broker/core/client/: repository.go  service.go
services/broker/core/config/: repository.go  service.go  utils.go  utils_test.go
services/broker/core/entities/: client.go  config.go  measurement.go
services/broker/core/measurement/: repository.go  service.go
services/broker/database/: db_postgres.go  error.go
services/broker/migrations/2023-03-07-134345_create_measurements/: up.sql
services/broker/migrations/2023-03-07-134350_create_events/: up.sql
services/broker/migrations/2023-03-07-141759_create_clients/: down.sql  up.sql
services/broker/src/: error.rs  main.rs  model.rs  repo.rs  rest.rs  schema.rs  service.rs  utils.rs
services/broker/test/: postman_collection.json  terrapi_broker.postman_collection.json
services/broker/utils/: rand.go
services/docker/: Dockerfile.broker
services/etc/: nginx.conf
services/etc/init.d/: terra
services/etc/terrapi/: env.example
services/etc/terrapi-broker/: config
services/web/: Dockerfile  README.md  env.example  go.mod  go.sum  mqtt_publish_subscribe.py  package-lock.json  package.json  rollup.config.js
services/web/api/: app.go
services/web/api/handlers/: client.go  config.go  measurement.go
services/web/api/presenter/: common.go
services/web/api/routes/: client.go  config.go  measurement.go
services/web/core/: config.go
services/web/core/client/: repository.go  service.go
services/web/core/config/: repository.go  service.go  utils.go
services/web/core/entities/: client.go  config.go
services/web/core/measurement/: service.go
services/web/database/: db_postgres.go
services/web/public/: global.css  index.html
services/web/src/: App.svelte  api.js  stores.js
services/web/src/components/: PasswordReader.svelte
services/web/src/routes/: Admin.svelte  Client.svelte  NotFound.svelte
services/web/test/: postman_collection.json  stores.test.js
services/web/utils/: rand.go
src/: ConfParser.cpp  ConfParser.h  Defs.h  Environment.cpp  Environment.h  Log.h  Main.cpp  Makefile  Pch.h  Sensor.cpp  Sensor.hpp  Switch.cpp  Switch.hpp  Terra.cpp  Terra.h  Utils.h  conf_parser.cpp  conf_parser.h  conf_parser.hpp  environment.h  main.cpp  pch.cpp  pch.h  sensor.cpp  sensor.hpp  switch.cpp  switch.hpp  terra.cpp  terra.h  terrapi.h  time_utils.h  utils.h
terrapi/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  windows-build-and-install-paho.sh
terrapi/docker/: Dockerfile
terrapi/etc/: terrapi.service
terrapi/etc/terrapi/: config  config.toml
terrapi/example/: config  dht11.c
terrapi/include/: terrapi.h
terrapi/include/terrapi/: sensor.h  switch.h  terrapi.h  utils.h
terrapi/lib/curl/windows/include/openssl/: configuration.h
terrapi/scripts/: install.sh
terrapi/src/: app.h  chrono.h  config.cpp  config.h  context.cpp  context.h  controller.cpp  controller.h  datetime.cpp  datetime.h  expr.cpp  expr.h  http.cpp  http.h  logger.cpp  logger.h  main.cpp  record.h  rule.cpp  rule.h  sensor.cpp  sensor.h  switch.cpp  switch.h  terra.cpp  terra.h  terrapi.cpp  utils.cpp  utils.h
terrapi/src/core/: bus.cpp  bus.h  context.cpp  context.h  core.cpp  core.h  expr.cpp  expr.h  record.h  sensor.cpp  sensor.h  switch.cpp  switch.h  timer.cpp  timer.h
terrapi/src/hardware/: config.h  dht11.cpp  dht11.h  htu21d.cpp  htu21d.h  signal.cpp  signal.h
terrapi/src/sensor/: dht11.cpp  factory.h  htu21d.cpp  signal.cpp
terrapi/test/lib/: wiringPi.c
terrapi/test/lib/WiringPi/: wiringPi.c  wiringPiI2C.c
terrapi/test/terrapi/: common.cpp  common.h  main.cpp  test_app.cpp  test_config.cpp  test_device.cpp  test_rules.cpp  test_switch.cpp  tests.h
terrapi/test/terrapi_test_client/: main.cpp
test/terrapi/: Main.cpp  conf_parser_test.hpp  main.cpp
