[package]
name = "broker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.8", features = ["derive"] }
diesel = { version = "2.0.3", features = ["chrono", "postgres", "r2d2",] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
envy = "0.4.2"
serde = { version = "1.0", features = ["serde_derive"] }
r2d2 = "0.8.9"
toml = "0.7.2"
rand = "0.8.5"
serde_json = "1.0.94"
actix-files = "0.6.2"
actix-cors = "0.6.4"
